--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <!--<version>2.4.2</version>-->
+        <!--<version>2.4.0</version>-->
         <version>2.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
@@ -97,6 +97,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+       <!-- <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-parent</artifactId>
+            <version>2.4.2</version>
+        </dependency>-->
     </dependencies>
 
     <build>
@@ -133,4 +138,7 @@
         </plugins>
     </build>
 
+    <organization>
+    	<name>Entwicklung TeamXS</name>
+    </organization>
 </project>
