--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.allow-bean-definition-overriding=true
 
 
 # JDBC Url = jdbc:h2:mem:feedbackdb
-spring.datasource.url=jdbc:h2:mem:testdb,DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -12,6 +12,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # spring.datasource.url=jdbc:h2:file:/data/demo
 
-spring.web.resources.static-locations=classpath:/static/
-spring.resources.static-locations=classpath:/static/
+#spring.web.resources.static-locations=classpath:/static/
+#spring.resources.static-locations=classpath:/static/
 
