--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-spring.main.allow-bean-definition-overriding=true
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+#spring.security.user.name= thomas
+#spring.security.user.password=MAxtor10
+#spring.security.user.roles=USER, ADMIN
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mariadb://localhost:3306/feedbackdb
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
-# JDBC Url = jdbc:h2:mem:feedbackdb
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-# spring.datasource.url=jdbc:h2:file:/data/demo
+logging.level.de.springbootbuch.applicationevents = DEBUG
 
-#spring.web.resources.static-locations=classpath:/static/
-#spring.resources.static-locations=classpath:/static/
 
