--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@
 #spring.security.user.roles=USER, ADMIN
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/feedbackdb_jpa
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/feedbackdb_jpa?serverTimezone=UTC
+  #?createDatabaseIfNotExist=true
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
