edit save Methode in FeedbackController

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
             <version>1.4.1.Final</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope><!-- Wird nur bei Test hochgefahren-->
+        </dependency>
 
         <!-- REST Documentation -->
         <dependency>
